syntax = "proto3";

package management.v1;

// Severity represents severity level of the check result or alert.
enum Severity {
  SEVERITY_UNSPECIFIED = 0;
  SEVERITY_EMERGENCY = 1;
  SEVERITY_ALERT = 2;
  SEVERITY_CRITICAL = 3;
  SEVERITY_ERROR = 4;
  SEVERITY_WARNING = 5;
  SEVERITY_NOTICE = 6;
  SEVERITY_INFO = 7;
  SEVERITY_DEBUG = 8;
}
